MMA-8223 Fiks småting IntelliJ rapporterer om