@@ -15,10 +15,8 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.cloud.contract.wiremock.AutoConfigureWireMock;
 import org.springframework.http.HttpHeaders;
-import org.springframework.http.MediaType;
 import org.springframework.test.context.ActiveProfiles;
 
-import java.util.Collections;
 import java.util.List;
 
 import static com.github.tomakehurst.wiremock.client.WireMock.aResponse;
@@ -31,10 +29,12 @@ import static com.github.tomakehurst.wiremock.client.WireMock.stubFor;
 import static com.github.tomakehurst.wiremock.client.WireMock.urlEqualTo;
 import static com.github.tomakehurst.wiremock.client.WireMock.urlMatching;
 import static java.util.Arrays.asList;
+import static java.util.Collections.singletonList;
 import static no.nav.doksikkerhetsnett.entities.Bruker.TYPE_PERSON;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.springframework.boot.test.context.SpringBootTest.WebEnvironment.RANDOM_PORT;
+import static org.springframework.http.HttpHeaders.*;
 import static org.springframework.http.HttpHeaders.CONTENT_TYPE;
 import static org.springframework.http.HttpStatus.BAD_REQUEST;
 import static org.springframework.http.HttpStatus.CREATED;
@@ -77,12 +77,12 @@ class OpprettOppgaveIT {
 		stubFor(post(urlMatching(URL_OPPGAVE))
 				.withRequestBody(equalToJson("{\"journalpostId\": \"444\"}", true, true))
 				.willReturn(aResponse().withStatus(OK.value())
-						.withHeader(HttpHeaders.CONTENT_TYPE, APPLICATION_JSON_VALUE)
+						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
 						.withBodyFile("opprettOppgave/opprettOppgave-happy444.json")));
 		stubFor(post(urlMatching(URL_OPPGAVE))
 				.withRequestBody(equalToJson("{\"journalpostId\": \"555\"}", true, true))
 				.willReturn(aResponse().withStatus(OK.value())
-						.withHeader(HttpHeaders.CONTENT_TYPE, APPLICATION_JSON_VALUE)
+						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
 						.withBodyFile("opprettOppgave/opprettOppgave-happy555.json")));
 		List<Journalpost> jps = asList(Journalpost.builder().journalpostId(333).build(),
 				Journalpost.builder().journalpostId(444).build());
@@ -104,14 +104,14 @@ class OpprettOppgaveIT {
 		stubFor(post(urlMatching(URL_OPPGAVE))
 				.withRequestBody(equalToJson("{\"tildeltEnhetsnr\": null, \"oppgavetype\": \"FDR\"}", true, true))
 				.willReturn(aResponse().withStatus(OK.value())
-						.withHeader(HttpHeaders.CONTENT_TYPE, APPLICATION_JSON_VALUE)
+						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
 						.withBodyFile("opprettOppgave/opprettOppgave-happyFDR.json")));
-		List<Journalpost> jp = Collections.singletonList(Journalpost.builder()
+		List<Journalpost> jp = singletonList(Journalpost.builder()
 				.journalpostId(555)
 				.journalforendeEnhet("FEIL")
 				.build());
 
-		OpprettOppgaveResponse response = opprettOppgaveService.opprettOppgaver(jp).get(0);
+		OpprettOppgaveResponse response = opprettOppgaveService.opprettOppgaver(jp).getFirst();
 		assertEquals("555", response.getJournalpostId());
 		assertEquals("FDR", response.getOppgavetype());
 		assertNull(response.getTildeltEnhetsnr());
@@ -126,14 +126,14 @@ class OpprettOppgaveIT {
 		stubFor(post(urlMatching(URL_OPPGAVE))
 				.withRequestBody(equalToJson("{\"tema\": \"AAR\", \"oppgavetype\": \"FDR\"}", true, true))
 				.willReturn(aResponse().withStatus(OK.value())
-						.withHeader(HttpHeaders.CONTENT_TYPE, APPLICATION_JSON_VALUE)
+						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
 						.withBodyFile("opprettOppgave/opprettOppgaveResponse-NyAnsvarligEnhet.json")));
-		List<Journalpost> jp = Collections.singletonList(Journalpost.builder()
+		List<Journalpost> jp = singletonList(Journalpost.builder()
 				.journalpostId(555)
 				.tema("AAR")
 				.build());
 
-		OpprettOppgaveResponse response = opprettOppgaveService.opprettOppgaver(jp).get(0);
+		OpprettOppgaveResponse response = opprettOppgaveService.opprettOppgaver(jp).getFirst();
 		assertEquals("555", response.getJournalpostId());
 		assertEquals("AAR", response.getTema());
 		assertEquals("FDR", response.getOppgavetype());
@@ -153,15 +153,15 @@ class OpprettOppgaveIT {
 				.inScenario("oppgave")
 				.whenScenarioStateIs("second")
 				.willReturn(aResponse().withStatus(OK.value())
-						.withHeader(HttpHeaders.CONTENT_TYPE, APPLICATION_JSON_VALUE)
+						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
 						.withBodyFile("opprettOppgave/opprettOppgaveResponse-NyAnsvarligEnhet-PEN.json"))
 				.willSetStateTo("done"));
-		List<Journalpost> jp = Collections.singletonList(Journalpost.builder()
+		List<Journalpost> jp = singletonList(Journalpost.builder()
 				.journalpostId(555)
 				.tema("PEN")
 				.build());
 
-		OpprettOppgaveResponse response = opprettOppgaveService.opprettOppgaver(jp).get(0);
+		OpprettOppgaveResponse response = opprettOppgaveService.opprettOppgaver(jp).getFirst();
 		assertEquals("555", response.getJournalpostId());
 		assertEquals("PEN", response.getTema());
 		assertEquals("JFR", response.getOppgavetype());
@@ -174,7 +174,7 @@ class OpprettOppgaveIT {
 						.withBodyFile("opprettOppgave/opprettOppgave-ukjentFeil.json")));
 		stubFor(post(urlMatching(URL_JIRA))
 				.willReturn(aResponse().withStatus(CREATED.value())
-						.withHeader(HttpHeaders.CONTENT_TYPE, APPLICATION_JSON_VALUE)
+						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
 						.withBodyFile("opprettOppgave/jiraResponse-ok.json")));
 		stubFor(get(urlMatching(JIRA_PROJECT_URL))
 				.willReturn(aResponse().withStatus(OK.value())
@@ -196,7 +196,7 @@ class OpprettOppgaveIT {
 		stubFor(post(urlMatching(URL_OPPGAVE))
 				.withRequestBody(equalToJson("{\"journalpostId\": \"222\", \"aktoerId\": \"1234567890123\"}", true, true))
 				.willReturn(aResponse().withStatus(OK.value())
-						.withHeader(HttpHeaders.CONTENT_TYPE, APPLICATION_JSON_VALUE)
+						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
 						.withBodyFile("opprettOppgave/opprettOppgave-happyWithAktorId222.json")));
 
 		Journalpost jp =
@@ -205,9 +205,9 @@ class OpprettOppgaveIT {
 						.bruker(Bruker.builder().id("1").type(TYPE_PERSON).build())
 						.build();
 
-		List<OpprettOppgaveResponse> opprettOppgaverResponses = opprettOppgaveService.opprettOppgaver(Collections.singletonList(jp));
-		assertEquals("222", opprettOppgaverResponses.get(0).getJournalpostId());
-		assertEquals("1234567890123", opprettOppgaverResponses.get(0).getAktoerId());
+		List<OpprettOppgaveResponse> opprettOppgaverResponses = opprettOppgaveService.opprettOppgaver(singletonList(jp));
+		assertEquals("222", opprettOppgaverResponses.getFirst().getJournalpostId());
+		assertEquals("1234567890123", opprettOppgaverResponses.getFirst().getAktoerId());
 	}
 
 	@Test
@@ -220,16 +220,16 @@ class OpprettOppgaveIT {
 						.bruker(Bruker.builder().id("1").type("IKKE_PERSON").build())
 						.build();
 
-		List<OpprettOppgaveResponse> opprettOppgaverResponses = opprettOppgaveService.opprettOppgaver(asList(jp));
-		assertNull(opprettOppgaverResponses.get(0).getAktoerId());
-		assertEquals("333", opprettOppgaverResponses.get(0).getJournalpostId());
+		List<OpprettOppgaveResponse> opprettOppgaverResponses = opprettOppgaveService.opprettOppgaver(singletonList(jp));
+		assertNull(opprettOppgaverResponses.getFirst().getAktoerId());
+		assertEquals("333", opprettOppgaverResponses.getFirst().getJournalpostId());
 	}
 
 	@Test
 	void shouldNotSettAktorIdWhenAPICallToIdentConsumerFails() {
 		stubFor(post(urlEqualTo(URL_PDL))
 				.willReturn(aResponse().withStatus(OK.value())
-						.withHeader(org.apache.http.HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
+						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
 						.withBodyFile("pdl/pdl-ident-notfound.json")));
 		stubOppgaveWithHappy333Response();
 
@@ -238,16 +238,17 @@ class OpprettOppgaveIT {
 				.bruker(Bruker.builder().id("1").type(TYPE_PERSON).build())
 				.build();
 
-		List<OpprettOppgaveResponse> opprettOppgaverResponses = opprettOppgaveService.opprettOppgaver(asList(jp));
-		assertNull(opprettOppgaverResponses.get(0).getAktoerId());
-		assertEquals("333", opprettOppgaverResponses.get(0).getJournalpostId());
+		List<OpprettOppgaveResponse> opprettOppgaverResponses = opprettOppgaveService.opprettOppgaver(singletonList(jp));
+		assertNull(opprettOppgaverResponses.getFirst().getAktoerId());
+		assertEquals("333", opprettOppgaverResponses.getFirst().getJournalpostId());
 	}
 
 	private void stubOppgaveWithHappy333Response() {
 		stubFor(post(urlMatching(URL_OPPGAVE))
 				.withRequestBody(equalToJson("{\"journalpostId\": \"333\", \"aktoerId\": null}", true, true))
-				.willReturn(aResponse().withStatus(OK.value())
-						.withHeader(HttpHeaders.CONTENT_TYPE, APPLICATION_JSON_VALUE)
+				.willReturn(aResponse()
+						.withStatus(OK.value())
+						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
 						.withBodyFile("opprettOppgave/opprettOppgave-happy333.json")));
 	}
 
@@ -255,14 +256,15 @@ class OpprettOppgaveIT {
 		stubFor(post("/azure_token")
 				.willReturn(aResponse()
 						.withStatus(OK.value())
-						.withHeader(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
+						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
 						.withBodyFile("azure/token_response_dummy.json")));
 	}
 
 	void happyAktoerIdStub() {
 		stubFor(post(urlEqualTo(URL_PDL))
-				.willReturn(aResponse().withStatus(OK.value())
-						.withHeader(org.apache.http.HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
+				.willReturn(aResponse()
+						.withStatus(OK.value())
+						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
 						.withBodyFile("pdl/pdl-aktoerid-happy.json")));
 	}
 }
